# trungtamtrienlam

./: .gitattributes  .gitignore  Backup_dữ_liệu_từ_database.md  README.md  start-be.bat
trungtamtrienlam-BE/app/: pyproject.toml
trungtamtrienlam-BE/app/common/: api_exception_handler.py  middleware.py
trungtamtrienlam-BE/app/common/abstract_models/: active_model.py  choice_array_field.py
trungtamtrienlam-BE/app/common/api/: ignore_throttle_on_test.py
trungtamtrienlam-BE/app/common/tasks/: __init__.py  image.py
trungtamtrienlam-BE/app/common/tests/: capture_queries_on_test.py  test_internal_rule.py
trungtamtrienlam-BE/app/common/utils/: hash.py
trungtamtrienlam-BE/app/core/: models.py
trungtamtrienlam-BE/app/core/accounts/: admin.py  models.py  services.py  views.py
trungtamtrienlam-BE/app/core/archives/: urls.py  views.py
trungtamtrienlam-BE/app/core/authentication/: admin.py  serializers.py
trungtamtrienlam-BE/app/core/calendars/: serializers.py
trungtamtrienlam-BE/app/core/chat_notes/: urls.py
trungtamtrienlam-BE/app/core/chat_reminds/: __init__.py  apps.py  urls.py
trungtamtrienlam-BE/app/core/chat_votes/: __init__.py  api.py  models.py  urls.py
trungtamtrienlam-BE/app/core/chats/: CHAT_SCHEMA.md  api.py  realtime.py  routing.py  tests.py  user_urls.py
trungtamtrienlam-BE/app/core/departments/: serializers.py  views.py
trungtamtrienlam-BE/app/core/documents/: serializers.py  views.py
trungtamtrienlam-BE/app/core/legacy_aidi/: apps.py  department_urls.py  file_api.py  ids_models.py  urls.py  (+5 more)
trungtamtrienlam-BE/app/root/: settings.py
(+693 files in other folders)
