[tool.poetry]
name = "trungtamtrienlam-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = ">=5.2,<6.0"
celery = "^5.3.1"
django-redis = "^5.3.0"
channels = "^4.1.0"
channels-redis = "^4.2.0"
django-environ = "^0.10.0"
sentry-sdk = "^1.29.0"
django-cors-headers = "^4.2.0"
flower = "^2.0.0"
psycopg2 = "^2.9.6"
django-allauth = "^0.51.0"
django-celery-email = "^3.0.0"
django-extensions = "^3.2.3"
djangorestframework = "^3.14.0"
django-filter = "^23.2"
drf-yasg = "^1.21.7"
dj-rest-auth = "^4.0.1"
django-celery-beat = ">=2.9,<3"
django-otp = "^1.2.2"
django-two-factor-auth = {extras = ["phonenumbers"], version = "^1.15.3"}
django-green-migration = "^1.1.2"
pillow = ">=11.0"
pusher = "^3.3.2"
djangorestframework-simplejwt = "^5.2.2"
django-debug-toolbar = "^4.1.0"
boto3 = "^1.28.16"
onesignal-sdk = "^2.0.0"
django-storages = "^1.13.2"
django-qr-code = "^3.1.1"
qrcode = "^7.4.2"
reportlab = "^4.0.7"
numpy = "^1.26.2"
hashids = "^1.3.1"
daphne = "^4.1.2"
rembg = {extras = ["cpu"], version = "^2.0.50"}
payos = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.2"
pytest-timer = "^0.0.11"
factory-boy = "^3.3.0"
requests-mock = "^1.11.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.1"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
